--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+<!--         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -404,14 +404,14 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
         <!--
           - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+<!--         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -449,14 +449,14 @@
 
           </section>
 
-        </div>
+        </div> -->
 
 
         <!--
           - clients
         -->
 
-        <section class="clients">
+<!--         <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -500,7 +500,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
       </article>
 
@@ -532,7 +532,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Georgia Institute of Technology</h4>
 
               <span>2007 — 2008</span>
 
