--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           - testimonials modal
         -->
 
-<!--         <div class="modal-container" data-modal-container>
+        <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -449,14 +449,14 @@
 
           </section>
 
-        </div> -->
+        </div>
 
 
         <!--
           - clients
         -->
 
-<!--         <section class="clients">
+        <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -500,7 +500,7 @@
 
           </ul>
 
-        </section> -->
+        </section>
 
       </article>
 
