--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Sacramento, California, USA</address>
+              <address>San Francisco, California, USA</address>
             </div>
 
           </li>
