--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <i class="logo-twitter"></i>
+              <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
