--- a/index.html
+++ b/index.html
@@ -132,27 +132,23 @@
 
         <div class="separator"></div>
 
-        <ul class="social-list">
-
+      <ul class="social-list">
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-linkedin"></ion-icon>
-            </a>
+              <a href="https://www.linkedin.com/in/salonishah331" class="social-link" target="_blank" rel="noopener noreferrer">
+                  <ion-icon name="logo-linkedin"></ion-icon>
+              </a>
           </li>
-
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
+              <a href="https://x.com/SaloniShah331" class="social-link" target="_blank" rel="noopener noreferrer">
+                  <i class="fa-brands fa-twitter"></i> <!-- Correct class for Font Awesome -->
+              </a>
           </li>
-
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-github"></ion-icon>
-            </a>
+              <a href="https://github.com/salonishah331" class="social-link" target="_blank" rel="noopener noreferrer">
+                  <ion-icon name="logo-github"></ion-icon>
+              </a>
           </li>
-
-        </ul>
+      </ul>
 
       </div>
 
