--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </li>
           <li class="social-item">
               <a href="https://x.com/SaloniShah331" class="social-link" target="_blank" rel="noopener noreferrer">
-                  <i class="fa-brands fa-twitter"></i> <!-- Correct class for Font Awesome -->
+                  <ion-icon name="logo-twitter"></ion-icon> 
               </a>
           </li>
           <li class="social-item">
