--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            Experienced Software Engineer with a B.S. in Computer Science from Georgia Institute of Technology. Currently a software engineer at Microsoft Azure. 
+
+            Skilled in: Python, Java, C++, JavaScript, Swift, C, C#
           </p>
 
           <p>
