--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       </div>
 
-      <div class="sidebar-info_more">
+<!--       <div class="sidebar-info_more">
 
         <div class="separator"></div>
 
@@ -82,9 +82,9 @@
               <p class="contact-title">Email</p>
 
               <a href="mailto:salonishah331@gmail.com" class="contact-link">salonishah331@gmail.com</a>
-            </div>
+            </div> -->
 
-          </li>
+<!--           </li>
 
           <li class="contact-item">
 
@@ -100,9 +100,9 @@
 
           </li>
 
-          <li class="contact-item">
+          <li class="contact-item"> -->
 
-            <div class="icon-box">
+<!--             <div class="icon-box">
               <ion-icon name="calendar-outline"></ion-icon>
             </div>
 
@@ -126,7 +126,7 @@
               <address>San Francisco, California, USA</address>
             </div>
 
-          </li>
+          </li> -->
 
         </ul>
 
@@ -138,6 +138,11 @@
                   <ion-icon name="logo-linkedin"></ion-icon>
               </a>
           </li>
+          <li class="social-item">
+            <a href="mailto:salonishah331@gmail.com" class="social-link" target="_blank" rel="noopener noreferrer">
+                <ion-icon name="mail"></ion-icon>
+            </a>
+        </li>
           <li class="social-item">
               <a href="https://x.com/SaloniShah331" class="social-link" target="_blank" rel="noopener noreferrer">
                   <ion-icon name="logo-twitter"></ion-icon> 
