--- a/index.html
+++ b/index.html
@@ -534,6 +534,9 @@
             </div>
 
             <h3 class="h3">Education</h3>
+
+            <a href="./assets/documents/resume.pdf" class="resume-btn" target="_blank" rel="noopener noreferrer">Resume PDF</a>
+            
           </div>
 
           <ol class="timeline-list">
