--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
             <h3 class="h3">Education</h3>
 
-            <a href="./assets/documents/resume.pdf" class="resume-btn" target="_blank" rel="noopener noreferrer">Resume PDF</a>
+                <a href="./assets/Shah_Saloni.pdf" class="resume-btn" target="_blank" rel="noopener noreferrer">Resume PDF</a>
             
           </div>
 
