--- a/index.html
+++ b/index.html
@@ -543,9 +543,11 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Georgia Institute of Technology</h4>
+              <h4 class="h4 timeline-item-title">M.S. in Machine Learning</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;">Georgia Institute of Technology</h4>
 
-              <span>2007 — 2008</span>
+
+              <span>July 2024 — May 2026 (Expected)</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
