--- a/index.html
+++ b/index.html
@@ -550,39 +550,25 @@
               <span>July 2024 — May 2026 (Expected)</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Overall GPA: 4.00/4.00
+
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">B.S. in Computer Science</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;">Georgia Institute of Technology</h4>
 
-              <span>2006 — 2007</span>
-
-              <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
+              <span>Aug 2018 — May 2022</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
-              </p>
+                Concentrations in Artificial Intelligence and Machine Learning, Faculty Honors, Deans List
+                Affiliations: Georgia Tech Product Management, Data Science at Georgia Tech, Startup Exchange, Society of Women in Engineering, Girls Who Code 
+                
 
-            </li>
+              </p>
 
           </ol>
 
