--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">M.S. in Machine Learning</h4>
-              <h4 class="h4 timeline-item-title" style="font-weight: normal;">Georgia Institute of Technology</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i></i>Georgia Institute of Technology</i></h4>
 
 
               <span>July 2024 — May 2026 (Expected)</span>
