--- a/index.html
+++ b/index.html
@@ -185,17 +185,17 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-<!--           <li class="navbar-item">
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
-          </li> -->
+          </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
           </li>
-<!-- 
+
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
-          </li> -->
+          </li>
 
         </ul>
 
