--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">M.S. in Machine Learning</h4>
-              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i></i>Georgia Institute of Technology</i></h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Georgia Institute of Technology</i></h4>
 
 
               <span>July 2024 — May 2026 (Expected)</span>
@@ -559,7 +559,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">B.S. in Computer Science</h4>
-              <h4 class="h4 timeline-item-title" style="font-weight: normal;">Georgia Institute of Technology</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Georgia Institute of Technology</i></h4>
 
               <span>Aug 2018 — May 2022</span>
 
@@ -588,28 +588,34 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Microsoft</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Software Engineer | Azure Core – Autopilot Time Team</i></h4>                                                                     
 
-              <span>2015 — Present</span>
-
+              <span>2Aug 2022 — Present</span>
+              
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+	            - Architect and maintain the Network Time Protocol in C++ to ensure optimal time synchronization for Azure Virtual Machines 
+	            - Developed comprehensive dashboards to monitor and analyze offsets in real-time. Integrated an alert system to scan dashboards to proactively identify potential virtual machine (VM) outages, resulting in 20% fewer customer-reported offset incidents and 5% decrease in downtime
+	            - Implemented an auto-healing feature to autonomously detect failing machines and repair or reboot VMs with no customer downtime
+	            - Developed a PowerShell based optimization system to streamline Azure node recovery during incidents, resulting in decrease in revenue loss
+	            - Act as the Designated Responsible Individual for the NTP service by responding to customer incidents and making necessary code fixes
+
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Microsoft</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Software Engineer Intern | Azure Core – Pilotfish Team</i></h4> 
 
-              <span>2013 — 2015</span>
+              <span>May 2021 — Jul 2021</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+              - Automated the process of scheduling routine Azure cloud computing server hardware maintenances for 300,000+ servers 
+              - Developed a client in C# to parse maintenance requests and interface with a maintenance API, enabling manipulation of server functionalities  
+              - Enhanced the efficiency of the PowerShell scheduling application, resulting in a 50% reduction in overall processing time and error rate
+
               </p>
 
             </li>
