--- a/index.html
+++ b/index.html
@@ -832,7 +832,9 @@
           <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
-        <section class="projects">
+	<h2 class="h2 article-title">Coming soon</h2>
+
+<!--         <section class="projects">
 
           <ul class="filter-list">
 
@@ -1054,7 +1056,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
       </article>
 
