--- a/index.html
+++ b/index.html
@@ -594,11 +594,11 @@
               <span>2Aug 2022 — Present</span>
               
               <p class="timeline-text">
-	            - Architect and maintain the Network Time Protocol in C++ to ensure optimal time synchronization for Azure Virtual Machines 
-	            - Developed comprehensive dashboards to monitor and analyze offsets in real-time. Integrated an alert system to scan dashboards to proactively identify potential virtual machine (VM) outages, resulting in 20% fewer customer-reported offset incidents and 5% decrease in downtime
-	            - Implemented an auto-healing feature to autonomously detect failing machines and repair or reboot VMs with no customer downtime
-	            - Developed a PowerShell based optimization system to streamline Azure node recovery during incidents, resulting in decrease in revenue loss
-	            - Act as the Designated Responsible Individual for the NTP service by responding to customer incidents and making necessary code fixes
+	            - Architect and maintain the Network Time Protocol in C++ to ensure optimal time synchronization for Azure Virtual Machines<br> 
+	            - Developed comprehensive dashboards to monitor and analyze offsets in real-time. Integrated an alert system to scan dashboards to proactively identify potential virtual machine (VM) outages, resulting in 20% fewer customer-reported offset incidents and 5% decrease in downtime<br>
+	            - Implemented an auto-healing feature to autonomously detect failing machines and repair or reboot VMs with no customer downtime<br> 
+	            - Developed a PowerShell based optimization system to streamline Azure node recovery during incidents, resulting in decrease in revenue loss<br> 
+	            - Act as the Designated Responsible Individual for the NTP service by responding to customer incidents and making necessary code fixes<br> 
 
               </p>
 
