--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li> -->
 
-          <li class="navbar-item">
+<!--           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
-          </li>
+          </li> -->
 
 <!--           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -832,9 +832,7 @@
           <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
-	<h2 class="h2 article-title">Coming soon</h2>
-
-<!--         <section class="projects">
+        <section class="projects">
 
           <ul class="filter-list">
 
@@ -1056,7 +1054,7 @@
 
           </ul>
 
-        </section> -->
+        </section>
 
       </article>
 
