--- a/index.html
+++ b/index.html
@@ -591,15 +591,10 @@
               <h4 class="h4 timeline-item-title">Microsoft</h4>
               <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Software Engineer | Azure Core – Autopilot Time Team</i></h4>                                                                     
 
-              <span>2Aug 2022 — Present</span>
+              <span>Aug 2022 — Present</span>
               
               <p class="timeline-text">
-	            - Architect and maintain the Network Time Protocol in C++ to ensure optimal time synchronization for Azure Virtual Machines<br> 
-	            - Developed comprehensive dashboards to monitor and analyze offsets in real-time. Integrated an alert system to scan dashboards to proactively identify potential virtual machine (VM) outages, resulting in 20% fewer customer-reported offset incidents and 5% decrease in downtime<br>
-	            - Implemented an auto-healing feature to autonomously detect failing machines and repair or reboot VMs with no customer downtime<br> 
-	            - Developed a PowerShell based optimization system to streamline Azure node recovery during incidents, resulting in decrease in revenue loss<br> 
-	            - Act as the Designated Responsible Individual for the NTP service by responding to customer incidents and making necessary code fixes<br> 
-
+	       Architect and maintain the Network Time Protocol in C++ to ensure optimal time synchronization for Azure Virtual Machines<br> 
               </p>
 
             </li>
@@ -612,24 +607,62 @@
               <span>May 2021 — Jul 2021</span>
 
               <p class="timeline-text">
-              - Automated the process of scheduling routine Azure cloud computing server hardware maintenances for 300,000+ servers 
-              - Developed a client in C# to parse maintenance requests and interface with a maintenance API, enabling manipulation of server functionalities  
-              - Enhanced the efficiency of the PowerShell scheduling application, resulting in a 50% reduction in overall processing time and error rate
+              Automated the process of scheduling routine Azure cloud computing server hardware maintenances for 300,000+ servers<br>
+              </p>
 
+            </li>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Amazon</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Software Development Engineer Intern | Echo BSP </i></h4> 
+
+              <span>Jul 2021 — Oct 2021</span>
+
+              <p class="timeline-text">
+              Designed, implemented, and tested a new feature using C++ and C# to enhance user experience on a specified subset of Echo devices<br>
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Genesys</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Software Engineer Intern | iOS Team </i></h4> 
 
-              <span>2010 — 2013</span>
+              <span>May 2020 — Aug 2020</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+              Redesigned the iOS application with the XMPP Framework to enhance user experience and incorporate branding changes<br>
+              </p>
+
+            </li>
+
+	   <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Stackfolio (acquired JKHY)</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Software Engineer</i></h4> 
+
+              <span>Oct 2019 — Feb 2020</span>
+
+              <p class="timeline-text">
+              Designed the user interface of the platform using HTML/CSS and Django and utilized MongoDB, Python, jQuery for backend and implemented a pre-purchase feature to prospect clients and developed an algorithm that autogenerates deal suggestions
+              </p>
+
+            </li>
+
+	<li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Bits of Good</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Fullstack Developer (Volunteer) | PACTS</i></h4> 
+
+              <span>Oct 2019 — Feb 2020</span>
+
+              <p class="timeline-text">
+             Built an interactive map using Node, ReactJS, and Firebase to connect users with behavioral health resources in the vicinity and developed a web-based portal using MongoDB and ReactJS to streamline the nonprofit project request application process
+
               </p>
 
             </li>
