--- a/index.html
+++ b/index.html
@@ -683,48 +683,47 @@
 
           <ol class="timeline-list">
 
-            <li class="timeline-item">
+       <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Team Lead | Machine Learning</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Georgia Tech Research Institute</i></h4> 
 
-              <span>2015 — Present</span>
+              <span>Aug 2019 — May 2021</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+               Led a team of 10 in creating a recommendation algorithm by training a neural network to output measures of 10+ features 
               </p>
 
             </li>
 
-            <li class="timeline-item">
+	<li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Undergraduate Teaching Assistant | Algorithms</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Georgia Institute of Technology College of Computing </i></h4> 
 
-              <span>2013 — 2015</span>
+              <span>Jan 2021 — Dec 2021</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+              Taught divide and conquer, dynamic programming, graph algorithms, complexity theory, NP-completeness, and Big O topics
+
               </p>
 
             </li>
 
-            <li class="timeline-item">
+     	<li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Product Manager</h4>
+              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Bubble – Hyperlocal Chat </i></h4> 
 
-              <span>2010 — 2013</span>
+              <span>Aug 2020 — May 2021</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+	Led a team of 15 in evaluating market landscape, value proposition, target users, and stakeholder groups of the application and collected and analyzed 1500+ data points to output product strategy with suggestions for UI improvement and marketing
+
               </p>
 
             </li>
-
+		  
           </ol>
 
         </section>
