--- a/index.html
+++ b/index.html
@@ -742,26 +742,25 @@
 
                   <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Team Lead | Machine Learning</h4>
-              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Georgia Tech Research Institute</i></h4> 
+              <h4 class="h4 timeline-item-title">Machine Learning for Pairs Trading</h4>
 
-              <span>Aug 2019 — May 2021</span>
+              <span>Jan 2021 — Apr 2021</span>
 
               <p class="timeline-text">
-               Led a team of 10 in creating a recommendation algorithm by training a neural network to output measures of 10+ features 
+               Processed a S&P 500 (2013 – 2018) dataset and utilized PCA, OPTICS clustering and ADF test to find cointegrated stock pairs, trained and ran lasso and ridge linear regression models using Python to predict a pair of stock’s spreads to determine z-scores,utilized K-Fold Cross Validation and back tested the algorithm resulting in an increase in returns of 20.2% over the testing period
+ 
               </p>
 
             </li>
 
 	<li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Undergraduate Teaching Assistant | Algorithms</h4>
-              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Georgia Institute of Technology College of Computing </i></h4> 
+              <h4 class="h4 timeline-item-title">Lyft Data Challenge</h4>
 
-              <span>Jan 2021 — Dec 2021</span>
+              <span>Aug 2019 — Sep 2019</span>
 
               <p class="timeline-text">
-              Taught divide and conquer, dynamic programming, graph algorithms, complexity theory, NP-completeness, and Big O topics
+              Analyzed 950,000+ data points to assess the value of a Lyft driver’s projected lifetime value in terms of revenue generated and utilized Python to generate 15+ data visualization models by extracting features about average trip earnings and frequency
 
               </p>
 
@@ -769,13 +768,12 @@
 
      	<li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Product Manager</h4>
-              <h4 class="h4 timeline-item-title" style="font-weight: normal;"><i>Bubble – Hyperlocal Chat </i></h4> 
+              <h4 class="h4 timeline-item-title">BreadCrumbs</h4>
 
-              <span>Aug 2020 — May 2021</span>
+              <span>Aug 2019 — Oct 2019</span>
 
               <p class="timeline-text">
-	Led a team of 15 in evaluating market landscape, value proposition, target users, and stakeholder groups of the application and collected and analyzed 1500+ data points to output product strategy with suggestions for UI improvement and marketing
+ 	      Developed an iOS application using Swift to decrease risks associated with traveling by tracking locations of users and reporting unusual trends and employed the Google Maps API to actively monitor the location of groups and alert group members of other members’ positions
 
               </p>
 
@@ -794,8 +792,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
+                <h5 class="h5">Python</h5>
+                <data value="80">90%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -807,8 +805,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
+                <h5 class="h5">Cloud Computing</h5>
+                <data value="70">85%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -820,8 +818,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
+                <h5 class="h5">C++</h5>
+                <data value="90">750%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -833,8 +831,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">JavaScript</h5>
+                <data value="50">70%</data>
               </div>
 
               <div class="skill-progress-bg">
