--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+		<ion-icon name="cloudy-outline"></ion-icon>
               </div>
 
               <div class="service-content-box">
