--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
             <li class="service-item">
 
-              <div class="ion-icon">
+              <div class="doing-box">
 		<ion-icon name="cloudy-outline"></ion-icon>
               </div>
 
