--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
             </li>
 
             <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+		    
+              <div class="doing-box">
+		<ion-icon name="book-outline"></ion-icon>
               </div>
 
               <div class="service-content-box">
@@ -274,7 +274,7 @@
 
             </li>
 
-            <li class="service-item">
+<!--             <li class="service-item">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
@@ -305,7 +305,7 @@
               </div>
 
             </li>
-
+ -->
           </ul>
 
         </section>
