--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Cloud Computing</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Designing scalable, reliable cloud computing solutions reaching 722 million users. 
                 </p>
               </div>
 
@@ -265,10 +265,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Machine Learning</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Pursuing my masters in Machine Learning.
                 </p>
               </div>
 
